--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-DB_URL:"mongodb+srv://usamahussaindev:Homedesigner133@cluster0.mqk27gw.mongodb.net/"
+DB_URL = "mongodb+srv://usamahussaindev:Usama123@cluster0.mqk27gw.mongodb.net/"
