--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,2 +1,9 @@
 PORT = 8000
 DB_URL = "mongodb+srv://usamahussaindev:Usama123@cluster0.mqk27gw.mongodb.net/"
+JWT_SECRET_KEY = "dfbkjgflseiia3948943954wfsdchsgfuw#%#%"
+JWT_EXPIRES = 7d
+ACTIVATION_SECRET = hfskjdweuiwe093$wew$@%W!Edfonoddfi
+SMPT_HOST = smtp.gmail.com
+SMPT_PORT = 465
+SMPT_PASSWORD =
+SMPT_MAIL =
