--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,13 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "redux-toolkit": "^1.1.2",
     "socket.io-client": "^4.6.1",
+    "three": "^0.160.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
