--- a/3d-room-planner/package.json
+++ b/3d-room-planner/package.json
@@ -16,7 +16,7 @@
     "vec2": "^1.6.0"
   },
   "devDependencies": {
-    "browserify": "^17.0.0",
+    "browserify": "^8.0.2",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -35,5 +35,5 @@
   "scripts": {
     "build": "browserify src/blueprint3d.js > example/js/blueprint3d.js --verbose"
   },
-  "author": "usamaHussain"
+  "author": "usama-hussain"
 }
